<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mintCream"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aragon.hazel.statesandcapitals.SplooshActivity"
    tools:showIn="@layout/activity_sploosh">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16pt"
        android:textAllCaps="true"
        android:fontFamily="serif"
        android:gravity="center" />

        <ImageView
            android:src="@drawable/flag"
            android:layout_width="160px"
            android:layout_height="120px"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/playGame"
            android:id="@+id/play_game"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/showScores"
            android:id="@+id/show_scores"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/exitString"
            android:id="@+id/exit"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
